--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Учебный проект «Угадай мелодию» от HTML Academy",
   "scripts": {
     "eslint": "eslint --ext .jsx --ext .js src/",
-    "test": "npm run eslint && jest",
+    "test": "npm run  && jest",
     "build": "webpack --mode production",
     "start": "webpack-dev-server"
   },
