--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node": "10"
   },
   "dependencies": {
+    "jsdom": "15.2.0",
     "prop-types": "15.7.2",
     "react": "16.10.2",
     "react-dom": "16.10.2"
